Fixed dm button alignment

--- a/code/dungeons-and-dragons-app/styles/style.css
+++ b/code/dungeons-and-dragons-app/styles/style.css
@@ -96,7 +96,7 @@
 }
 
 .loadGameButtons {
-    padding-top: 50px;
+    padding-top: 60px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
